src/objects/Payment_Notification__c.object
<CustomObject>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was the notification handled in Salesforce, creating necessary objects (typically Opportunities).</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <inlineHelpText>The originator of this notification.</inlineHelpText>
        <label>Notification Type</label>
        <picklist>
            <picklistValues>
                <fullName>IPN / Silent Post</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Webservice Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Payment Callout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payment Notifications</relationshipLabel>
        <relationshipName>Payment_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Transaction_Id__c</fullName>
        <label>Parent Transaction Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Email__c</fullName>
        <label>Payer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payer_ID__c</fullName>
        <label>Payer ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <inlineHelpText>The status from the Payment Processor: Completed, Authorized, Pending, Declined, Reversed, or Failed.  It&apos;s not a picklist, because different processors might have different values.</inlineHelpText>
        <label>Payment Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Result__c</fullName>
        <inlineHelpText>If the notification is processed, indicates the result of the processing, such as whether a new contact was created or an existing match found.  If the notification can&apos;t be processed successfully, indicates the error encountered.</inlineHelpText>
        <label>Processing Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Email__c</fullName>
        <label>Receiver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recurring_Transaction_Id__c</fullName>
        <label>Recurring Transaction Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <inlineHelpText>For caller&apos;s this is the full request xml.  For listener&apos;s, this is a list of name value pairs of the parameters.</inlineHelpText>
        <label>Request or Parameters</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <inlineHelpText>The full response string from the processor, when our code has called the processor directly.  This will be empty on notifications from the processor.</inlineHelpText>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <inlineHelpText>The type of transaction the notification represents when provided by the processor.  When we are calling the processor, this will be the name of the processor method we are calling.</inlineHelpText>
        <label>Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorLineNumber__c</fullName>
        <inlineHelpText>the line number of code that caused the exception error</inlineHelpText>
        <label>errorLineNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>errorStackTrace__c</fullName>
        <inlineHelpText>the stack trace of code that caused the exception error</inlineHelpText>
        <label>errorStackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Payment Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Notification_Type__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Payer_Email__c</columns>
        <columns>Receiver_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsTest__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Notifications</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RealIPN</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>IsProcessed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsTest__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Real Notifications</label>
    </listViews>
    <listViews>
        <fullName>TestIPN</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Payment_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsTest__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Test Notifications</label>
    </listViews>
    <listViews>
        <fullName>Unhandled_Notifications</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payer_Email__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Parent_Transaction_Id__c</columns>
        <columns>Processing_Result__c</columns>
        <columns>IsTest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsProcessed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Notifications Not Processed</label>
    </listViews>
    <nameField>
        <label>Notification Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>